--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <img srcset="./image/line1.png 2x" alt="">
+            <img srcset="./image/line1.png 2x" alt="" class="home-line">
             <div class="home-content">
                 <div class="home-container">
                     <div class="home-right">
