--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="wrapper">
         <header class="header">
             <div class="home-top">
-                <div class="home-container">
+                <div class="home-container container-flex">
                     <img srcset="./image/logo.png 2x" alt="" class="home-logo">
-                    <ul class="home-menu">
+                    <ul class="home-menu container-flex">
                         <li class="home-item">
                             <a href="#" class="home-link">home</a>
                         </li>
@@ -37,7 +37,7 @@
                             <a href="#" class="home-link">articles</a>
                         </li>
                     </ul>
-                    <a href="#" class="home-contact">Contact</a>
+                    <a href="#" class="home-contact font-link">Contact</a>
                     <div class="home-toggle">
                         <span class="line line-first"></span>
                         <span class="line line-second"></span>
@@ -45,36 +45,34 @@
                 </div>
             </div>
             <img srcset="./image/line1.png 2x" alt="" class="home-line">
-            <div class="home-content">
-                <div class="home-container">
-                    <div class="home-right">
-                        <h1 class="home-title">We make
-                            <p>every room</p>
-                            <p>a unique shape</p>
-                        </h1>
-                        <div class="home-info">
-                            <img srcset="./image/line2.png 2x" alt="" class="home-line">
-                            <p class="home-desc">Lorem ipsum onsectetur adipiscing elit. Blandit mauris etiam faucibus laoreet tellus nam. Gravida solor aenean orci, facilisis senectus.</p>
-                        </div>
-                        <img srcset="./image/img2.png 2x" alt="" class="home-image2">
+            <div class="home-content container-flex">
+                <div class="home-right container-flex">
+                    <h1 class="home-title">We make
+                        <p>every room</p>
+                        <p>a unique shape</p>
+                    </h1>
+                    <div class="home-info">
+                        <img srcset="./image/line2.png 2x" alt="" class="home-line">
+                        <p class="home-desc">Lorem ipsum onsectetur adipiscing elit. Blandit mauris etiam faucibus laoreet tellus nam. Gravida solor aenean orci, facilisis senectus.</p>
                     </div>
-                    <div class="home-left">
-                        <img src="./image/img1.png" alt="" class="home-image1">
-                    </div>
+                    <img srcset="./image/img2.png 2x" alt="" class="home-image2">
+                </div>
+                <div class="home-left">
+                    <img src="./image/img1.png" alt="" class="home-image1">
                 </div>
             </div>
         </header>
         <main>
             <section class="about">
-                <div class="about-header">
-                    <h2 class="about-heading">Our remember-able stories</h2>
-                    <p class="about-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Blandit mauris etiam faucibus laoreet vestibulum pretium tellus nam. Gravida aenean orci, facilisis senectus.</p>
+                <div class="about-header container-flex">
+                    <h2 class="about-heading font-heading">Our remember-able stories</h2>
+                    <p class="about-desc font-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Blandit mauris etiam faucibus laoreet vestibulum pretium tellus nam. Gravida aenean orci, facilisis senectus.</p>
                 </div>
-                <div class="about-content">
+                <div class="about-content container-flex">
                     <div class="about-left">
                         <img srcset="./image/img3.png 2x" alt="">
                     </div>
-                    <div class="about-right">
+                    <div class="about-right container-flex">
                         <img srcset="./image/img4.png 2x" alt="">
                         <img srcset="./image/line3.png 2x" alt="" class="about-line">
                         <h2 class="about-caption">We don’t renovate space, we transform them</h2>
@@ -83,32 +81,32 @@
                 <img srcset="./image/Lines.png 2x" alt="">
             </section>
             <section class="project">
-                <div class="project-header">
-                    <h2 class="project-heading">Our latest projects</h2>
-                    <a href="#" class="project-link">All Projects</a>
+                <div class="project-header container-flex">
+                    <h2 class="project-heading font-heading">Our latest projects</h2>
+                    <a href="#" class="project-link font-link">All Projects</a>
                 </div>
                 <div class="project-detail">
                     <img src="./image/img5.png" alt="">
                     <div class="project-content">
                         <h3 class="project-title">Dining Room</h3>
-                        <a href="#" class="project-view">View Details</a>
+                        <a href="#" class="project-view font-link">View Details</a>
                     </div>
-                    <div class="project-move">
+                    <div class="project-move container-flex">
                         <div class="dot"></div>
                         <div class="dot"></div>
-                        <div class="border">
+                        <div class="border container-flex">
                             <div class="circle"></div>
                         </div>
                         <div class="dot"></div>
                     </div>
                 </div>
             </section>
-            <section class="design">
+            <section class="design container-flex">
                 <div class="design-content">
-                    <h3 class="design-heading">Our designers</h3>
-                    <p class="design-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Blandit mauris etiam faucibus laoreet vestibulum</p>
-                    <p class="design-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Blandit mauris etiam faucibus laoreet vestibulum nam. Gravida aenean orci, facilisis senectus.</p>
-                    <a href="" class="design-link">See All Designers</a>
+                    <h3 class="design-heading font-heading">Our designers</h3>
+                    <p class="design-desc font-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Blandit mauris etiam faucibus laoreet vestibulum</p>
+                    <p class="design-desc font-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Blandit mauris etiam faucibus laoreet vestibulum nam. Gravida aenean orci, facilisis senectus.</p>
+                    <a href="" class="design-link font-link">See All Designers</a>
                 </div>
                 <div class="design-image">
                     <img srcset="./image/img6.png 2x" alt="">
@@ -116,10 +114,10 @@
             </section>
             <section class="blog">
                 <div class="blog-header">
-                    <h1 class="blog-heading">Our latest articles</h1>
-                    <a href="#" class="blog-link">Read All Articles</a>
+                    <h1 class="blog-heading font-heading">Our latest articles</h1>
+                    <a href="#" class="blog-link font-link">Read All Articles</a>
                 </div>
-                <div class="blog-content">
+                <div class="blog-content container-flex">
                     <div class="blog-item">
                         <div class="blog-img">
                             <img src="./image/img7.png" alt="">
@@ -137,7 +135,7 @@
                         </div>
                         <h3 class="blog-title">How to decore your home</h3>
                         <div class="blog-line"></div>
-                        <div class="blog-detail">
+                        <div class="blog-detail container-flex">
                             <a href="#" class="blog-view">Read More</a>
                             <p class="blog-date">April 30, 2020</p>
                         </div>
@@ -146,11 +144,11 @@
             </section>
         </main>
         <footer>
-            <div class="footer-move">
+            <div class="footer-move container-flex">
                 <i class="fa-solid fa-angles-up"></i>
                 <p class="footer-guide">Go to the top</p>
             </div>
-            <div class="footer-content">
+            <div class="footer-content container-flex">
                 <div class="footer-text">
                     <h3 class="footer-title">Stay in touch with us</h3>
                     <ul class="footer-list">
@@ -169,7 +167,7 @@
                 </div>
             </div>
             <img src="./image/line.png" alt="" class="footer-line">
-            <div class="footer">
+            <div class="footer container-flex">
                 <p class="footer-version">©Heling 2021.</p>
                 <img srcset="./image/logo.png 2x" alt="" class="footer-logo">
                 <p class="footer-policy">Privacy Policy</p>
